Bug 152713 - FTL B3 should do BitAnd binary snippets
Summary: FTL B3 should do BitAnd binary snippets
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 152668
  Show dependency treegraph
 
Reported: 2016-01-04 13:36 PST by Filip Pizlo
Modified: 2016-01-04 15:01 PST (History)
5 users (show)

See Also:


Attachments
the patch (5.95 KB, patch)
2016-01-04 13:51 PST, Filip Pizlo
mark.lam: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2016-01-04 13:36:36 PST
Patch forthcoming.
Comment 1 Filip Pizlo 2016-01-04 13:51:07 PST
Created attachment 268230 [details]
the patch
Comment 2 WebKit Commit Bot 2016-01-04 13:54:01 PST
Attachment 268230 [details] did not pass style-queue:


ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7485:  Place brace on its own line for function definitions.  [whitespace/braces] [4]
ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7497:  Place brace on its own line for function definitions.  [whitespace/braces] [4]
Total errors found: 2 in 4 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Mark Lam 2016-01-04 13:58:18 PST
Comment on attachment 268230 [details]
the patch

View in context: https://bugs.webkit.org/attachment.cgi?id=268230&action=review

r=me

> Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7462
> +    template<typename BinaryArithOpGenerator>

Perhaps rename "BinaryArithOpGenerator" to "BinaryBitOpGenerator" to match the function name?
Comment 4 Filip Pizlo 2016-01-04 13:58:40 PST
(In reply to comment #3)
> Comment on attachment 268230 [details]
> the patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=268230&action=review
> 
> r=me
> 
> > Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:7462
> > +    template<typename BinaryArithOpGenerator>
> 
> Perhaps rename "BinaryArithOpGenerator" to "BinaryBitOpGenerator" to match
> the function name?

Good idea, will do.
Comment 5 Filip Pizlo 2016-01-04 15:01:09 PST
Landed in http://trac.webkit.org/changeset/194556