FTL B3 should do BitAnd binary snippets https://bugs.webkit.org/show_bug.cgi?id=152713

Reviewed by Mark Lam.

Getting ready to finish up the binary bitop snippets.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::compileBitAnd):
(JSC::FTL::DFG::LowerDFGToLLVM::emitBinarySnippet):
(JSC::FTL::DFG::LowerDFGToLLVM::emitBinaryBitOpSnippet):
(JSC::FTL::DFG::LowerDFGToLLVM::allocateCell):
* tests/stress/object-bit-and.js: Added.
(foo):
(things.valueOf):
* tests/stress/untyped-bit-and.js: Added.
(foo):
(valueOf):



Canonical link: https://commits.webkit.org/170794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194556 268f45cc-cd09-0410-ab3c-d52691b4dbfc